--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@vue/cli-plugin-unit-jest": "^3.0.1",
+    "apexcharts": "^3.5.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "dotenv": "^6.0.0",
@@ -28,6 +29,7 @@
     "particles.js": "^2.0.0",
     "ramda": "^0.25.0",
     "vue": "^2.5.17",
+    "vue-apexcharts": "^1.3.0",
     "vue-material-design-icons": "^3.0.0",
     "vue-multiselect": "^2.1.0",
     "vue-octicon": "^2.1.1",
