--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ramda": "^0.25.0",
     "vue": "^2.5.17",
     "vue-apexcharts": "^1.3.0",
+    "vue-country-flag": "^1.1.0",
     "vue-material-design-icons": "^3.0.0",
     "vue-multiselect": "^2.1.0",
     "vue-octicon": "^2.1.1",
