env file and config -> loaderManager

--- a/.env
+++ b/.env
@@ -1,6 +1,21 @@
-GITHUB_USER=""
-GITHUB_PASSWORD=""
-GITHUB_REPO=""
+###########################################################
+####################### DATA SOURCE #######################
+###########################################################
+
+### note: must uncomment one data source to use it
+
+######################### GitHub ##########################
+#GITHUB_USER=""
+#GITHUB_PASSWORD=""
+#GITHUB_REPO=""
+
+######################## PhraseApp ########################
+#PHRASEAPP_PROJECT_ID=""
+#PHRASEAPP_TOKEN=""
+
+###########################################################
+#################### FIREBASE PROJECT  ####################
+###########################################################
 
 VUE_APP_FIREBASE_MESSAGING_SENDER_ID=""
 VUE_APP_FIREBASE_API_KEY=""
