--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "logs": "firebase functions:log",
     "prepare": "rm -rf ./dist && webpack && cp ./../.env dist/ && cp -r ./dicts dist/ && cp package.json dist/package.json"
   },
+  "engines": {"node": "8"},
   "jest": {
     "verbose": false,
     "testEnvironment": "node",
@@ -20,9 +21,9 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "bluebird": "^3.5.4",
     "alex": "^7.1.0",
     "async": "^2.6.1",
+    "bluebird": "^3.5.4",
     "dictionary-bg": "^1.2.2",
     "dictionary-cs": "^2.0.0",
     "dictionary-da": "^3.3.0",
@@ -49,7 +50,7 @@
     "dictionary-vi": "^2.0.0",
     "dotenv": "^6.0.0",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.5",
+    "firebase-functions": "^2.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-fetch": "^2.2.0",
@@ -68,7 +69,7 @@
     "@babel/preset-env": "^7.0.0",
     "eslint": "^5.5.0",
     "eslint-plugin-promise": "^4.0.0",
-    "firebase-tools": "^4.2.1",
+    "firebase-tools": "^6.9.2",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.7.2"
