--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
     "ramda": "^0.25.0",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.3.0",
     "vue-country-flag": "^1.1.0",
@@ -36,6 +37,9 @@
     "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5"
+  },
+  "resolutions": {
+    "**/**/fsevents": "^1.2.9"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.1.0",
