--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vue-multiselect": "^2.1.0",
     "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.1",
-    "vuefire": "^1.4.5"
+    "vuefire": "^1.4.5",
+    "vuex": "^3.1.1"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
