--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.0.1"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
