--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,13 @@
 ### note: must uncomment one data source to use it
 
 ######################### GitHub ##########################
-#GITHUB_USER=""
-#GITHUB_PASSWORD=""
-#GITHUB_REPO=""
+#VUE_APP_GITHUB_USER=""
+#VUE_APP_GITHUB_PASSWORD=""
+#VUE_APP_GITHUB_REPO=""
 
 ######################## PhraseApp ########################
-#PHRASEAPP_PROJECT_ID=""
-#PHRASEAPP_TOKEN=""
+#VUE_APP_PHRASEAPP_PROJECT_ID=""
+#VUE_APP_PHRASEAPP_TOKEN=""
 
 ###########################################################
 #################### FIREBASE PROJECT  ####################
