--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   test:
     docker:
-      - image: circleci/node:8.9
+      - image: circleci/node:chakracore-10.13
     working_directory: ~/repo
     steps:
       - checkout
