--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ramda": "^0.25.0",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
-    "vue-apexcharts": "^1.3.0",
+    "vue-clipboard2": "^0.3.0",
     "vue-country-flag": "^1.1.0",
     "vue-material-design-icons": "^3.3.1",
     "vue-multiselect": "^2.1.0",
