--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-multiselect": "^2.1.0",
     "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.1",
+    "vue-virtual-scroller": "^1.0.0-rc.2",
     "vuefire": "^1.4.5",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.0.1"
