--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@vue/cli-plugin-unit-jest": "^3.0.1",
-    "apexcharts": "^3.5.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.19",
+    "bootstrap-vue": "^2.0.0-rc.27",
     "dotenv": "^6.0.0",
     "eslint-plugin-jest": "^21.22.0",
     "firebase": "^5.4.2",
@@ -28,14 +27,19 @@
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
     "ramda": "^0.25.0",
+    "rtl-detect": "^1.0.2",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
-    "vue-apexcharts": "^1.3.0",
+    "vue-clipboard2": "^0.3.0",
     "vue-country-flag": "^1.1.0",
-    "vue-material-design-icons": "^3.0.0",
+    "vue-material-design-icons": "^3.3.1",
     "vue-multiselect": "^2.1.0",
     "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.1",
-    "vuefire": "^1.4.5"
+    "vue-virtual-scroller": "^1.0.0-rc.2",
+    "vuefire": "^1.4.5",
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.1.0",
