--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,6 @@
   "engines": {
     "node": "10"
   },
-  "engines": {"node": "8"},
   "jest": {
     "verbose": false,
     "testEnvironment": "node",
@@ -52,6 +51,7 @@
     "dictionary-uk": "^2.0.0",
     "dictionary-vi": "^2.0.0",
     "dotenv": "^6.0.0",
+    "firebase": "^6.6.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^3.0.2",
     "lodash": "^4.17.10",
