--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ VUE_APP_FIREBASE_AUTH_DOMAIN=""
 VUE_APP_FIREBASE_DATABASE_URL=""
 VUE_APP_FIREBASE_PROJECT_ID=""
 VUE_APP_FIREBASE_STORAGE_BUCKET=""
+VUE_APP_FIREBASE_APP_ID=""
