--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "prepare": "rm -rf ./dist && webpack && cp ./../.env dist/ && cp ./../.env ./  && cp -r ./dicts dist/ && cp package.json dist/package.json"
+    "prepare": "rm -rf ./dist && webpack && cp ./../.env dist/ && cp ./../.env ./ && cp -r ./dicts dist/ && cp package.json dist/package.json"
   },
   "engines": {
     "node": "10"
@@ -54,6 +54,7 @@
     "firebase": "^6.6.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^3.0.2",
+    "flat": "^4.1.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "node-fetch": "^2.2.0",
