--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "firebase": "^5.4.2",
     "firestore": "^1.1.6",
     "fuse.js": "^3.2.1",
-    "jest": "^23.5.0",
+    "jest": "^24.9.0",
+    "jsdom": "^15.2.1",
+    "jsdom-global": "^3.0.2",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "nprogress": "^0.2.0",
