--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service --mode=development build",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
-    "deploy": "yarn build && yarn deploy:functions && yarn deploy:app",
+    "deploy": "yarn test && yarn build && yarn deploy:functions && yarn deploy:app",
     "deploy:app": "firebase deploy --except functions",
     "deploy:functions": "yarn --cwd ./functions deploy"
   },
