--- a/functions/package.json
+++ b/functions/package.json
@@ -26,30 +26,31 @@
     "alex": "^7.1.0",
     "async": "^2.6.1",
     "bluebird": "^3.5.4",
-    "dictionary-bg": "^1.2.2",
-    "dictionary-cs": "^2.0.0",
-    "dictionary-da": "^3.3.0",
-    "dictionary-de": "^2.0.0",
-    "dictionary-el": "^3.0.0",
-    "dictionary-en-gb": "^2.0.0",
-    "dictionary-es": "^1.2.1",
-    "dictionary-fr": "^2.2.0",
-    "dictionary-he": "^1.0.0",
-    "dictionary-hu": "^1.0.0",
-    "dictionary-it": "^1.3.0",
-    "dictionary-lt": "^1.0.0",
-    "dictionary-nb": "^2.1.0",
-    "dictionary-nl": "^1.3.0",
-    "dictionary-pl": "^1.2.1",
-    "dictionary-pt": "^1.2.1",
-    "dictionary-ro": "^1.2.1",
-    "dictionary-ru": "^1.2.1",
-    "dictionary-sk": "^1.2.1",
-    "dictionary-sr": "^2.0.0",
-    "dictionary-sv": "^2.0.0",
-    "dictionary-tr": "^1.2.1",
-    "dictionary-uk": "^2.0.0",
-    "dictionary-vi": "^2.0.0",
+    "dictionary-bg": "^1.3.3",
+    "dictionary-cs": "^2.0.3",
+    "dictionary-da": "^4.4.1",
+    "dictionary-de": "^2.0.4",
+    "dictionary-el": "^3.0.5",
+    "dictionary-en": "^3.0.1",
+    "dictionary-en-gb": "^2.2.2",
+    "dictionary-es": "^3.0.1",
+    "dictionary-fr": "^2.5.1",
+    "dictionary-he": "^1.0.4",
+    "dictionary-hu": "^2.0.2",
+    "dictionary-it": "^1.3.3",
+    "dictionary-lt": "^1.0.3",
+    "dictionary-nb": "^2.1.3",
+    "dictionary-nl": "^1.3.4",
+    "dictionary-pl": "^1.2.4",
+    "dictionary-pt": "^2.0.1",
+    "dictionary-ro": "^2.0.2",
+    "dictionary-ru": "^2.0.2",
+    "dictionary-sk": "^1.3.2",
+    "dictionary-sr": "^3.0.2",
+    "dictionary-sv": "^3.0.2",
+    "dictionary-tr": "^1.3.4",
+    "dictionary-uk": "^2.2.1",
+    "dictionary-vi": "^2.1.3",
     "dotenv": "^6.0.0",
     "firebase": "^6.6.0",
     "firebase-admin": "~6.0.0",
