--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "deploy:app": "firebase deploy --except functions",
     "deploy:functions": "yarn --cwd ./functions deploy"
   },
+  "pre-commit": [
+    "lint",
+    "test",
+    "build"
+  ],
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@vue/cli-plugin-unit-jest": "^3.0.1",
@@ -53,6 +58,7 @@
     "babel-jest": "^27.3.1",
     "firebase-tools": "^8.11.2",
     "jest": "^27.3.1",
+    "pre-commit": "^1.2.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
